[tool.poetry]
name = "cw-3"
version = "0.1.0"
description = ""
authors = ["Sergey Raskolenko <'sergey.raskolenko@gmail.com'>"]
readme = "README.md"
packages = [{include = "cw_3"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
